# motion-analysis-2d

./: .gitignore  404.html  LICENSE  README.md  application_settings.json  defs.py  index.html  index.xml  main_widget.spec  pyproject.toml  requirements.txt  shortcut_keys.json  sitemap.xml
categories/: index.html  index.xml
hugo/: config.toml
hugo/layouts/partials/: extend_head.html
motion_analysis_2d/: __main__.py  defs.py  main_widget.py
motion_analysis_2d/controls/: __init__.py  controls_edit.py  controls_media.py  menu_bar.py  toolbar_file.py
motion_analysis_2d/custom_components/: __init__.py  arrow_item.py  badge_button.py  chord_item.py  color_button.py  dock_base.py  file_list.py  gui_save_base.py  help_widget.py  my_colors.py  path_edit.py  perspective_item.py  pie_item.py  sample.py  spinbox_slider.py  static_tracker.py  steps_enum.py  webview.py
motion_analysis_2d/dialogs/: __init__.py  angle_dialog.py  distance_dialog.py  perspective_dialog.py  point_dialog.py  tracker_dialog.py
motion_analysis_2d/display_items/: __init__.py  angle_item.py  base_item_display.py  distance_item.py  set_perspective_item.py  tracker_item.py
motion_analysis_2d/display_widgets/: __init__.py  data_plot_widget.py  frame_widget.py  plot_splitter.py  xy_plot_widget.py
motion_analysis_2d/docks/: __init__.py  dock_data_plot.py  dock_extrinsic.py  dock_files.py  dock_intrinsic.py  dock_items.py  dock_orient.py  dock_save.py  dock_track.py  dock_xy_plot.py
motion_analysis_2d/funcs/: __init__.py  check_mimetypes.py  coord_transform.py  draw_cal_pattern.py  geometric_calc.py  intrinsic_calc.py  load_extrinsic.py  load_intrinsic.py  load_settings.py  load_shortcut_keys.py  logger_setup.py  motion_funcs.py  naming.py  save_format.py
motion_analysis_2d/preferences_pane/: __init__.py  default_preferences.py  load_preferences.py  shortcuts_widget.py  visual_preferences_widget.py
motion_analysis_2d/splashscreen/: splashscreen.py
motion_analysis_2d/workers/: __init__.py  worker_stream.py  worker_tracking.py
page/1/: index.html
tags/: index.html  index.xml
tests/controls/: test_controls_edit.py  test_controls_media.py
tests/display_widgets/: test_frame_widget.py  test_tracker_item.py
tests/funcs/: test_check_mimetypes.py  test_load_settings.py  test_motion_funcs.py  test_naming.py
