[tool.poetry]
name = "motion-analysis-2d"
version = "0.1.0"
description = ""
authors = ["wenliangyeoh <wlyeoh@cc.saga-u.ac.jp>"]
readme = "README.md"
packages = [{include = "motion_analysis_2d"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PySide6 = "^6.6.0"
QtAwesome = "^1.2.3"
pyqtgraph = "^0.13.3"
scipy = "^1.11.3"
opencv-contrib-python = "^4.8.1.78"
superqt = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pyinstaller = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
