[tool.poetry]
name = "motion-analysis-2d"
version = "0.1.2"
description = ""
authors = ["wenliangyeoh <wlyeoh@cc.saga-u.ac.jp>"]
readme = "README.md"
packages = [{include = "motion_analysis_2d"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PySide6 = "~6.6"
QtAwesome = "~1.3"
pyqtgraph = "~0.13"
scipy = "~1.12"
opencv-contrib-python-headless = "~4.9"
superqt = "~0.6"
camera-calibration = {git = "https://github.com/cps-lab-saga/camera-calibration", rev = "main"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-qt = "^4.3"
pyinstaller = "^6.3"
pytest-benchmark = {extras = ["histogram"], version = "^4.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
motion_analysis_2d = "motion_analysis_2d.main_widget:main"
