[tool.poetry]
name = "motion-analysis-2d"
version = "0.1.7"
description = "Tracking objects in 2D"
authors = ["wenliangyeoh <wlyeoh@cc.saga-u.ac.jp>"]
readme = "README.md"
packages = [{ include = "motion_analysis_2d" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PySide6 = "~6.7"
QtAwesome = "~1.3"
pyqtgraph = "~0.13"
scipy = "~1.13"
opencv-contrib-python-headless = "~4.10"
superqt = "~0.6"
camera-calibration = { git = "https://github.com/cps-lab-saga/camera-calibration", rev = "main" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-qt = "^4.3"
pyinstaller = "^6.3"
pytest-benchmark = { extras = ["histogram"], version = "^4.0.0" }
briefcase = "~0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
motion_analysis_2d = "motion_analysis_2d.main_widget:main"

[tool.briefcase]
project_name = "motion-analysis-2d"
bundle = "jp.ac.saga-u.is.ip.cps"
version = "0.1.7"
url = "https://cps-lab-saga.github.io/motion-analysis-2d/"
license = "MIT License"

[tool.briefcase.app.motion-analysis-2d]
formal_name = "Motion Analysis 2D"
description = "Tracking objects in 2D"
long_description = "Tracking objects in 2D"
icon = "./motion_analysis_2d/resource/motion_analysis_2d" # Briecase will choose the right extension depending the os (png,ico,...)
sources = ['./motion_analysis_2d']
requires = [
    'camera-calibration @ git+https://github.com/cps-lab-saga/camera-calibration@b5f06ed187c550e4d3e32ae4529006d4df68ee58 ; python_version >= "3.11" and python_version < "3.13"',
    'numpy==1.26.4 ; python_version >= "3.11" and python_version < "3.13"',
    'opencv-contrib-python-headless==4.9.0.80 ; python_version >= "3.11" and python_version < "3.13"',
    'packaging==24.0 ; python_version >= "3.11" and python_version < "3.13"',
    'pygments==2.17.2; python_version >= "3.11" and python_version < "3.13"',
    'pyqtgraph==0.13.6 ; python_version >= "3.11" and python_version < "3.13"',
    'pyside6-addons==6.6.3.1; python_version >= "3.11" and python_version < "3.13"',
    'pyside6-essentials==6.6.3.1; python_version >= "3.11" and python_version < "3.13"',
    'pyside6==6.6.3.1 ; python_version >= "3.11" and python_version < "3.13"',
    'qtawesome==1.3.1 ; python_version >= "3.11" and python_version < "3.13"',
    'qtpy==2.4.1 ; python_version >= "3.11" and python_version < "3.13"',
    'scipy==1.12.0 ; python_version >= "3.11" and python_version < "3.13"',
    'shiboken6==6.6.3.1 ; python_version >= "3.11" and python_version < "3.13"',
    'superqt==0.6.4 ; python_version >= "3.11" and python_version < "3.13"',
    'typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "3.13"',
]

[tool.briefcase.app.motion-analysis-2d.macOS]
requires = []

[tool.briefcase.app.motion-analysis-2d.linux]
requires = []
system_requires = []

[tool.briefcase.app.motion-analysis-2d.windows]
requires = []

[tool.briefcase.app.motion-analysis-2d.linux.appimage]
manylinux = "manylinux_2_28"

[tool.briefcase.app.motion-analysis-2d.linux.flatpak]
flatpak_sdk = "org.freedesktop.Sdk"
flatpak_runtime = "org.freedesktop.Platform"
flatpak_runtime_version = 23.08
